assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');

/* ------------------------------------------ General Styling */

body {
    font-family: "Quicksand", sans-serif;
    background-color: #fff;
}

p, a, li, label {
    font-size: 18px;
    color: #04207c;
}

.new-section {
    margin-top: 50px;
}

footer p, footer a {
    font-size: 16px;
    color: #fff;
}

.two-font-weight {
    font-weight: 200;
}

.eight-font-weight {
    font-weight: 800;
}

.green-text {
    color: #40a7b4;
}

.green-statement {
    margin-top: 100px;
    margin-bottom: 100px;
}

.no-list-style {
    list-style-type: none;
}

.no-decoration {
    text-decoration: none;
}

/* ------------------------------------------ Navbar */

#logo {
    background: url(/assets/images/logo-light.webp) no-repeat center center;
    background-size: contain;
    height: 128px;
    width: 160px;
}

.nav-link {
    font-size: 22px;
    color: #04207c;
}

.nav-link:hover {
    color: #40a7b4;
}

/* ------------------------------------------ Event Banner */

.event-date {
    height: 500px;
    overflow: hidden;
    background-image: url('/assets/images/banner.webp');
    background-size: contain;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    transform: scaleX(-1);
    user-select: none;
}

.date-text {
    font-family: "Sofia Sans", sans-serif;
    transform: scaleX(-1);
}

.break-mold {
    color: #84351f;
}

#next-event-date {
    font-size: 55px;
    color: #04207c;
}

.dark-blue-button {
    background-color: #04207c;
    color: #fff;
    border-radius: 15px;
    font-size: 18px;
}

.dark-blue-button:hover {
    background-color: #40a7b4;
    color: #fff;
}

/* ------------------------------------------ Get Involved section */

.get-involved-div {
    background-color: #b0cbe1;
    color: #04207c;
    border-radius: 15px;
    padding: 20px;
    border-style: none;
}

.get-involved-image {
    width: 100%;
    object-fit: cover;
    border-radius: 15px;
}

/* ------------------------------------------ Get Involved Cards */

.hand-icon {
    color: #881606;
}

.bg-dark-blue {
    background-color: #04207c;
    border-radius: 15px;
}

.blue-text {
    color: #04207c;
}

/* ------------------------------------------ Contact Us */

#contact-us {
    background-color: #68BDCA;
    border-radius: 30px;
    font-weight: 500;
}

.venue-map {
    border: 0;
    border-radius: 10px;
}

.contact-list:hover {
    border-bottom: 2px solid #04207c;
}

/* ----------------- Contact Us Form */

.form-background {
    background-color: rgb(255,255,255,0.5);
    padding: 25px 10px;
    border-radius: 15px;
}

.form-control:focus {
    border-color: #04207c;
    box-shadow: 0 0 0 .15rem rgba(4, 32, 124, 0.3)
}

.form-check-input {
    background-image: none;
}

.form-check-input:checked {
    background-color: #04207c;
    border-color: #04207c;
}

.form-check-input[type=radio]{
    border-radius: 20%;
}

.form-check-input:focus {
    border-color: #04207c;
    box-shadow: none;
}

.submit-btn {
    background-color: #F3EFF6;
    border-width: 1px;
    border-radius: 10px;
}

.submit-btn:hover {
    border-width: 1px;
    background-color: #F3EFF6;
    border-color: #585693;
}

/* ----- Contact Us Form Message Box */

#message {
    height: 130px;
    resize: none;
    overflow: auto;
}

textarea::-webkit-scrollbar {
  width: 8px;
}

textarea::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 0.375rem;
}

textarea::-webkit-scrollbar-thumb {
  background-color: #ccc;
  border-radius: 0.375rem;
  border: 1px solid #f1f1f1;
}

/* ------------------------------------------ Our Supporters */

.support-div {
    justify-content: center;
    display: flex;
}

.support-logo {
    object-fit: cover;
    height: 100px;
    width: auto;
}

#our-supporters {
    color:#04207c;
}

#headline-logo {
    height: 150px;
    width: auto;
    margin: auto;
}

/* ------------------------------------------ Our Mission */

.our-mission-div {
    border-top: 4px solid #40a7b4;
    border-bottom: 4px solid #40a7b4;
}

.mission-image-div {
    background-image: url('/assets/images/our-mission.webp');
    background-size: contain;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center 95%;
    width: 100%;
    height: 400px;
}

/* ------------------------------------------ Footer */

footer {
    background-color: #04207c;
    height: 300px;
    color: #fff;
    font-family: "Sofia Sans", sans-serif;
}

.footer-socials {
    font-size: 20px;
}

footer li {
    margin-bottom: 1rem;
}

.footer-links:hover {
    border-bottom: 2px solid #fff;
}


/* ----------------------------------------------------------------------------- Media Queries */

@media (min-width:2000px) {

    /* General Styling */
    p, a, li, label, .dark-blue-button {
        font-size: 20px;
    }

    /* Navbar */
    .nav-link {
        font-size: 24px;
    }

    /* Banner */
    #next-event-date {
        font-size: 60px;
    }

    /* Footer */
    footer p, footer a {
        font-size: 18px;
        color: #fff;
    }
}

@media (min-width:1700px) {

    /* Banner */
    .event-date {
        height: 600px;
        background-position: center 30%;
    }

    /* Our Mission */
    .mission-image-div{
        height: 500px;
    }
}

/* General Styling */

/* Navbar */

/* Event Banner */

/* Get Involved section */

/* Get Involved Cards */

/* Contact Us */

/* Contact Us Form */

/* Contact Us Form Message Box */

/* Our Supporters */

/* Our Mission */

/* Footer */

